CI: configure minimal token permissions

--- a/.github/workflows/pr-testing.yaml
+++ b/.github/workflows/pr-testing.yaml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+# minimal permissions
+permissions:
+  contents: read
+
 jobs:
   pr-testing:
     name: PR Testing
