--- a/.github/workflows/pr-testing.yaml
+++ b/.github/workflows/pr-testing.yaml
@@ -38,6 +38,12 @@ jobs:
           clj-kondo: latest        # Clj-kondo
           cljstyle: latest             # cljstyle
           zprint: latest                # zprint
+      - name: kondo lint
+        run: clj-kondo --lint src test
+      - name: eastwood lint
+        run: |
+          java -version
+          lein eastwood
       - name: clojure tests
         run: lein test
         timeout-minutes: 30
